major corrections for index, recognition, portfolio and more

--- a/app/index.html
+++ b/app/index.html
@@ -707,8 +707,11 @@
                     You can <span class="header__italics">refine</span>  your brand identity and <span class="header__italics">build</span> out a <br class="header__break">
                     powerful technology suite for your business.
                 </p>
-                <a href="quote.html" class="btn btn--gradient btn--link btn--header ">
+                <!-- <a href="quote.html" class="btn btn--gradient btn--link btn--header ">
                     <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> TELL US ABOUT YOUR PROJECT
+                </a> -->
+                <a href="quote.html" class="btn btn--gradient btn--link btn--header ">
+                    <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> FIND OUT MORE
                 </a>
             </div>
 
@@ -868,9 +871,42 @@
 
         <div class="swiper-container">
             <div class="swiper-wrapper">
-
                 <div class="testimonials swiper-slide">
-                    <div class="testimonials__container-first ">
+                    <div class="testimonials__container-one">
+                        <img src="assets/images/giwa.jpg " class="testimonials__pic " alt=" ">
+                    </div>
+                    <div class="testimonials__container-second ">
+                        <h2 class="title testimonials__title title__format">
+                            Our Clients Loves Us
+                        </h2>
+
+                        <div class="testimonials__content ">
+                            <img src="assets/images/giwa.jpg " class="testimonials__img--resp " alt=" ">
+                            <div class="testimonials__body ">
+                                <img src="assets/images/quote.png " alt=" " class="quote ">
+                                <p class="testimonials__body-text ">
+                                    &OpenCurlyDoubleQuote;My experience with KJK Africa entails a very thorough team, highly focused, and professional and this reflects in every project they take on. 
+
+                                    The team combines integrity, technological know-how, and business acumen, which makes them a brand to look out for.
+                                    I highly recommend KJK Africa for any Tech related project.
+                                    &nbsp;&CloseCurlyDoubleQuote;
+                                </p>
+                                <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
+                                    Mrs. Adebimpe Giwa
+                                    <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
+                                    <br>
+                                    <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">
+                                        MD, 
+                                        <br>
+                                        tru-DATA and TrippleGee & Co. Plc.    
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials swiper-slide">
+                    <div class="testimonials__container-two ">
                         <img src="assets/images/pic-square.png " class="testimonials__pic " alt=" ">
                     </div>
                     <div class="testimonials__container-second ">
@@ -887,7 +923,7 @@
                                      to our quest to provide a user friendly communication channel for every visitor.&nbsp;&CloseCurlyDoubleQuote;
                                 </p>
                                 <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
-                                    Thelma Davies
+                                    Telema Davies
                                     <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
                                     <br>
                                     <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">Partners TwoReport</span>
@@ -896,6 +932,110 @@
                         </div>
                     </div>
                 </div>
+                <div class="testimonials swiper-slide">
+                    <div class="testimonials__container-three">
+                        <img src="assets/images/Bridget.jpg" class="testimonials__pic " alt=" ">
+                    </div>
+                    <div class="testimonials__container-second ">
+                        <h2 class="title testimonials__title title__format">
+                            Our Clients Loves Us
+                        </h2>
+
+                        <div class="testimonials__content ">
+                            <img src="assets/images/Bridget.jpg " class="testimonials__img--resp " alt=" ">
+                            <div class="testimonials__body ">
+                                <img src="assets/images/quote.png " alt=" " class="quote ">
+                                <p class="testimonials__body-text ">
+                                    &OpenCurlyDoubleQuote;
+                                    Over the years, I have been opportune to work closely with the KJK Africa team on some specialized projects and observed as
+                                     KJK Africa helps businesses create value and change the narratives in the Tech space.
+                                     The team works with expertise, experience, and synergy from dedicated members of brilliant minds, who made our solutions seem like a piece of cake. 
+                                     <!-- They made it a point to carry me along
+                                     in every single detail with such ease, it felt like I was a member of the KJK Africa. -->
+                                    &nbsp;&CloseCurlyDoubleQuote;
+                                </p>
+                                <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
+                                    Bridget Ebubedike
+                                    <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
+                                    <br>
+                                    <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">
+                                        Business Development Consultant.
+                                        <br>
+                                        TrippleGee & Co. Plc.
+                                         </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials swiper-slide">
+                    <div class="testimonials__container-four">
+                        <img src="assets/images/Debola.jpg" class="testimonials__pic " alt=" ">
+                    </div>
+                    <div class="testimonials__container-second ">
+                        <h2 class="title testimonials__title title__format">
+                            Our Clients Loves Us
+                        </h2>
+
+                        <div class="testimonials__content ">
+                            <img src="assets/images/Debola.jpg " class="testimonials__img--resp " alt=" ">
+                            <div class="testimonials__body ">
+                                <img src="assets/images/quote.png " alt=" " class="quote ">
+                                <p class="testimonials__body-text ">
+                                    &OpenCurlyDoubleQuote;
+                                    I came in contact with KJK Africa, when I wanted to design the website www.mantleofmordecai.org, and they were able 
+                                    to deliver a fantastic platform so much I had to request that they manage it.
+                                    These guys completely invest in the success of their clients. They ensure that your need is understood and go ahead to satisfy it.
+                                    &nbsp;&CloseCurlyDoubleQuote;
+                                </p>
+                                <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
+                                    Debola Salako-Kupoluyi
+                                    <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
+                                    <br>
+                                    <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">
+                                        Founder, 
+                                        <br>
+                                        Mantle of Mordecai Foundation
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials swiper-slide">
+                    <div class="testimonials__container-five">
+                        <img src="assets/images/Bakare.jpeg" class="testimonials__pic " alt=" ">
+                    </div>
+                    <div class="testimonials__container-second ">
+                        <h2 class="title testimonials__title title__format">
+                            Our Clients Loves Us
+                        </h2>
+
+                        <div class="testimonials__content ">
+                            <img src="assets/images/Bakare.jpeg " class="testimonials__img--resp " alt=" ">
+                            <div class="testimonials__body ">
+                                <img src="assets/images/quote.png " alt=" " class="quote ">
+                                <p class="testimonials__body-text ">
+                                    &OpenCurlyDoubleQuote;My experience with KJK Africa is nothing short 
+                                    of what I believe should be the standard with which excellence is measured in the Tech Space. 
+                                    Combining integrity and trust with tech expertise; again and again, the Team has been able to satisfy the needs of every project I have had the chance of partnering with them.  
+                                    &nbsp;&CloseCurlyDoubleQuote;
+                                </p>
+                                <p class="testimonials__body-text testimonials__body-text--small testimonials__body-text--adjusted ">
+                                    Mr. Kehinde Bakare
+                                    <!-- <span class="content--thin--strong testimonials__body-text--strong">Senior Pastor</span> -->
+                                    <br>
+                                    <span class="content--thin--strong content--thin--strong--colored testimonials__body-text--strong">
+                                        MD,
+                                        <br>
+                                         Bethel Group of Companies
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
