portfolio, blog changes and more

--- a/app/blog-story2.html
+++ b/app/blog-story2.html
@@ -451,7 +451,7 @@
 
     <section>
         <div style="padding-top: 100px;">
-            <div class="blog__story">
+            <!-- <div class="blog__story">
                 <div class="blog__story--hero">
                 <h1 class="">
                     DT: Digital Transformation Guide 
@@ -534,20 +534,29 @@
                     </p>
                 </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <section>
-        <!-- <div>
+        <div>
             <div class="blog__story">
-                <h3 class="blog__story--italics">
-                Is Digital Transformation the next step for you?
-                </h3>
-                <div>
+                <div class="blog__story--hero">
+                <h1 class="">
+                    DT: Digital Transformation Guide Part 2
+                </h1>
+                <p class="blog__author"> 
+                    Written by Abiola Akinwoleola
+                </p>
+                </div>
+                
+                <div class="blog__story--img">
                 <img src="assets/images/blog-story2.png" alt="">
                 </div>
                 <div class="blog__story--container">
+                    <h3 class="blog__story--italics">
+                        Is Digital Transformation the next step for you?
+                        </h3>
                 <p>
                     Technology is moving at great strides, and to succeed, firms must understand how and why 
                     o merge technology with strategy. It is more than just a trending term, Digital
@@ -597,7 +606,7 @@
                             </p>
                     </div>
                 </div>
-                <div>
+                <!-- <div>
                     <h3>
                         How then do you drive Digital Transformation?
                     </h3>
@@ -650,10 +659,10 @@
                         are proper scrutinized with projections of alignment with the organizations' visions
                                 </p>
                     </div>
-                </div>
+                </div> -->
                 </div>
             </div>
-            <div class="blog__story--socials">
+            <!-- <div class="blog__story--socials">
                 <span>
                 Share on
                 </span>
@@ -666,8 +675,8 @@
                 <a target="_blank" href="https://wa.me/2348126261152?text=Welcome%20to%20KJK%20Africa%0A">
                 <img src="assets/images/whatsapp-gradient.png" alt="">
                 </a>
-            </div>
-        </div> -->
+            </div> -->
+        </div> 
         <div class="blog__story--socials">
             <span>
             Share on
@@ -693,7 +702,7 @@
                 <div class="blog__cards">
                     <div class="blog__card">
                         <a href="">
-                            <img src="assets/images/blogfeaturedimg.png" alt="">
+                            <img src="assets/images/blog6.png" alt="">
                         </a>
                         <div>
                             <div>
