--- a/app/blog.html
+++ b/app/blog.html
@@ -473,6 +473,7 @@
                             DT: Digital Transformation Guide
                         </h1>
                         <p class="blog__author">Written by Abiola Akinwoleola</p>
+                        <p>Digital Growth Lead, KJK Africa</p>
                         <p class="blog__text--long">
                             
                             “Change” is said to be the one factor that remains constant, however, 
@@ -480,7 +481,7 @@
                              the task to keep up with it. Since technology is innovation itself and its use, 
                              a driver for innovative implementations; organizations have turned to technology to lead the change in optimizing their endeavor to create solutions. This led to the birth of digital transformation.
                         </p>
-                        <a href="#" class="diff__button btn btn--link btn--primary btn--upper-space  btn--hover" >
+                        <a href="blog-story.html" class="diff__button btn btn--link btn--primary btn--upper-space  btn--hover" >
                             READ STORY
                         </a>
                         </div>
@@ -492,7 +493,7 @@
                     <div>
                         <div class="blog__column--item">
                             <div>
-                                <a href="blog-story.html">
+                                <a href="blog-story2.html">
                                     <img src="assets/images/blog2.png" alt="">
                                 </a>
                             </div>
@@ -500,17 +501,17 @@
                                 <div>
                                 <p class="blog__red">Blog Post</p>
                                 <p class="blog__date">
-                                    14th April 2020
+                                    9th May 2020
                                 </p>
                                 <!-- <h1 class="blog__title">
                                     DT: Digital Transformation Guide
                                 </h1> -->
                                 <h5>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Digital Transformation Guide : Part 2
                                 </h5>
                                 <p class="blog__author--italics">Written by Abiola Akinwoleola</p>
                                 </div>
-                                <a class="blog__cta" href="blog-story.html">
+                                <a class="blog__cta" href="blog-story2.html">
                                    <span>
                                     Read Story
                                    </span> 
@@ -622,17 +623,17 @@
                             <div>
                             
                             <p class="blog__date">
-                                14th April 2020
+                                9th April 2020
                             </p>
                             <!-- <h1 class="blog__title">
                                 DT: Digital Transformation Guide
                             </h1> -->
                             <h4 class="blog__text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Digital Transformation Guide : Part 2.
                             </h4>
                             <p class="blog__author--italics">Written by Abiola Akinwoleola</p>
                             </div>
-                            <a class="blog__cta xform" href="blog-story.html">
+                            <a class="blog__cta xform" href="blog-story2.html">
                                <span>
                                 Read Story
                                </span> 
