portfolio and more updates

--- a/app/about.html
+++ b/app/about.html
@@ -469,15 +469,12 @@ gtag('config', 'UA-159861942-1');
             <div class="who__container--main">
                 <div class="who__hero" >
                 <h2 class="">    
-                    KJK Africa is a technology and branding firm that builds viable 
-                    technology products and deliver services that help businesses 
-                    improve throughput, deepen customer relationship, enhance visibility, 
-                    and scale revenue.
+                    KJK Africa is a Software Design and Development company based in Lagos, Nigeria, registered as KJK Communication Limited. We are a group of talented, trained, motivated, and dedicated web design professionals; we place our clients’ needs and expectations above and beyond everything else, while maintaining integrity in our dealings.
+
                 </h2>
                 <p>
-                    We are passionate about simplifying business processes with technology, 
-                    thereby maximizing business impact and revenue. KJK builds end-user focused,
-                     business viable products that will support your business’s drive for growth at scale.
+                    We help start-ups and fast-growing tech companies build successful and scalable products that users love. Our forte are agile and dedicated teams of brilliant minds who rock in Web, Mobile, Corporate E-Brand, Enterprise Development, Desktop Development, and Business Technology Consulting.
+                    
                 </p>
                 </div>
                 <div >
