--- a/app/index.html
+++ b/app/index.html
@@ -711,7 +711,7 @@
                     <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> TELL US ABOUT YOUR PROJECT
                 </a> -->
                 <a href="quote.html" class="btn btn--gradient btn--link btn--header ">
-                    <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> FIND OUT MORE
+                    <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> Find Out More
                 </a>
             </div>
 
